# opdstui

./: .envrc  .gitignore  Justfile  LICENSE  Makefile  README.md  install.sh  main.py  opdstui.nimble  pyproject.toml  ruff.toml
.github/workflows/: build_and_push.yml  release.yml
doc/: readme.txt
src/: app.nim  configuration.nim  link.nim  opdstui.nim  page.nim  session.nim
src/opdstui/: application.py  bookdetails.py  cli.py  debug.py  entry.py  link.py  nav.py  page.py  utils.py
tests/fixtures/: asset.xml  library.xml  main.xml
