[project]
name = "opdstui"
version = "0.1.0"
description = "opds tui reader"
readme = "README.md"
authors = [{ name = "sreedevk", email = "sreedev@icloud.com" }]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "python-lsp-server>=1.14.0",
]
